--- a/src/App.css
+++ b/src/App.css
@@ -4,19 +4,18 @@
 
 .App-header {
   background-color: #282c34;
-  padding: 10px;
+  min-height: 20vh;
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  font-size: calc(6px + 2vmin);
 }
 
-.App-link {
-  color: #61dafb;
+.App-header *{
+  margin: 10px;
 }
 
-.but {
-color: red;
+ul {
+  margin-top: 50px;
 }
